:lipstick: Fix evaluation text color on mobile.

--- a/src/profile/scss/_profile_evaluation.scss
+++ b/src/profile/scss/_profile_evaluation.scss
@@ -35,6 +35,7 @@
       margin-top: .15em;
     }
     @include for-mobile () {
+      color: $primary_text_color;
       clear: both;
       transform: translateY($profile_item_top);
     }
